Fix broken paint. Fix chrome flex alignment

--- a/src/main.css
+++ b/src/main.css
@@ -16,7 +16,7 @@ div {
   background-size: cover;
   background-position: center center;
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   justify-content: center;
 }
 
@@ -32,9 +32,7 @@ blockquote {
   align-items: center;
   justify-content: center;
   transition: 1s;
-  transform-style: preserve-3d;
   backface-visibility: hidden;
-  position: absolute;
 }
 
 p {
